--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <button class="check-word">Check Word</button>
             </div>
         </div>
+        <div class="footer">
+            <p>Coded & Designed with by <a href="mailto:viwemhlabavm@gmail.com" class="email-link">Viwe Mhlaba</a></p>
+        </div>
     </div>
 
     <!-- Modal Popup -->
